import java.util.Scanner;
import java.io.File;
import java.io.FileNotFoundException;

    public class Dashboard {
        public String search (){

            return "";
        }

        public String category(){
        return "";
        }
    }